Initial pull over from the split